feat: test the markdown

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -15,6 +15,6 @@
     <a href="/about/">关于</a>
     <a href="/blog/">博客</a>
     <h1>Astro</h1>
-    <h1>Index</h1>
+    <h1>My Blog</h1>
   </body>
 </html>
