feat:test solid component in astro

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,6 @@
 ---
+import Navigation from "../components/Navigation.astro"
+import '../styles/global.css';
 // import Layout from '../layouts/Layout.astro';
 // import Card from '../components/Card.astro';
 ---
@@ -11,10 +13,9 @@
     <title>Astro</title>
   </head>
   <body>
-    <a href="/">首页</a>
-    <a href="/about/">关于</a>
-    <a href="/blog/">博客</a>
+    <Navigation />
     <h1>Astro</h1>
     <h1>My Blog</h1>
+    <a href="/posts/post1">第一篇</a>
   </body>
 </html>
