--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,20 +1,67 @@
 ---
-// import Layout from '../layouts/Layout.astro';
-// import Card from '../components/Card.astro';
+import '../styles/global.css';
+import Navigation from "../components/Navigation.astro"
+const pageTitle = "关于我";
+
+const identity = {
+  firstName: "莎拉",
+  country: "加拿大",
+  occupation: "技术撰稿人",
+  hobbies: ["摄影", "观鸟", "棒球"],
+};
+
+const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
+
+const happy = true;
+const finished = false;
+const goal = 3;
+
+const skillColor = "green";
+const fontWeight = '600';
+const textCase = 'uppercase';
 ---
 
-<html lang="zh-cn">
-<head>
-	<meta charset="UTF-8">
-	<meta name="generator" content={Astro.generator}>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Astro</title>
-</head>
-<body>
-    <a href="/">首页</a>
-	<a href="/about/">关于</a>
-    <a href="/blog/">博客</a>
-	<h1>Astro</h1>
-	<h1>About</h1>
-</body>
+<html lang="zh">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>{pageTitle}</title>
+  </head>
+  <body>
+    <Navigation />
+    <h1>{pageTitle}</h1>
+    <p>以下是关于我的几个事实：</p>
+    <ul>
+      <li>我的名字是{identity.firstName}.</li>
+      <li>我住在{identity.country}。我的职业是{identity.occupation}。</li>
+      {
+        identity.hobbies.length >= 2 && (
+          <li>
+            我的两个习惯：{identity.hobbies[0]}和{identity.hobbies[1]}
+          </li>
+        )
+      }
+    </ul>
+    <p>我的技能是：</p>
+    <ul>
+      {skills.map((skill) => <li class="skill">{skill}</li>)}
+    </ul>
+    {happy && <p>我非常乐意学习 Astro！</p>}
+
+    {finished && <p>我完成了这节教程！</p>}
+
+    {goal === 3 ? <p>我的目标是在三天内完成。</p> : <p>我的目标不是 3 天。</p>}
+  </body>
 </html>
+
+<style define:vars={{skillColor, fontWeight, textCase}}>
+  h1 {
+    color: purple;
+    font-size: 4rem;
+  }
+  .skill {
+    color: var(--skillColor);
+    font-weight: var(--fontWeight);
+    text-transform: var(--textCase);
+  }
+</style>
