--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,7 @@
 ---
+import '../styles/global.css';
+import Navigation from '../components/Navigation.astro';
+import Counter from '../components/Counter'
 // import Layout from '../layouts/Layout.astro';
 // import Card from '../components/Card.astro';
 ---
@@ -11,10 +14,9 @@
     <title>Astro</title>
   </head>
   <body>
-    <a href="/">首页</a>
-    <a href="/about/">关于</a>
-    <a href="/blog/">博客</a>
+    <Navigation />
     <h1>Astro</h1>
+	<Counter client:only />
     <h1>Index</h1>
   </body>
 </html>
